--- a/backend/composer.json
+++ b/backend/composer.json
@@ -11,18 +11,19 @@
   "require": {
     "php": "^8.4",
     "dedoc/scramble": "^0.12.14",
+    "google/apiclient": "^2.18",
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "^12.0",
     "laravel/sanctum": "^4.0",
     "laravel/tinker": "^2.9",
+    "light-it-labs/lightit-auth-laravel": "^1.0",
+    "php-open-source-saver/jwt-auth": "^2.0",
     "sentry/sentry-laravel": "^4.4",
     "spatie/laravel-query-builder": "^6.0"
   },
   "require-dev": {
     "barryvdh/laravel-ide-helper": "^3.0",
     "brianium/paratest": "^7.4",
-    "captainhook/hook-installer": "^1.0",
-    "captainhook/plugin-composer": "^5.3",
     "fakerphp/faker": "^1.23",
     "laravel/pail": "^1.1",
     "laravel/pint": "^1.13",
@@ -99,5 +100,12 @@
     }
   },
   "minimum-stability": "stable",
-  "prefer-stable": true
+  "prefer-stable": true,
+
+  "repositories": [
+    {
+        "type": "vcs",
+        "url": "https://github.com/Light-it-labs/lightit-auth-laravel.git"
+    }
+  ]
 }
