feat: crud group

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -36,7 +36,6 @@
     "phpunit/phpunit": "^11.0.1",
     "sojeda/conventional-commits": "^1.5",
     "spatie/laravel-ignition": "^2.4",
-    "webgriffe/captainhook": "^2.1",
     "worksome/coding-style": "^3.0",
     "worksome/request-factories": "^3.3"
   },
@@ -94,9 +93,7 @@
       "pestphp/pest-plugin": true,
       "php-http/discovery": true,
       "dealerdirect/phpcodesniffer-composer-installer": true,
-      "worksome/coding-style": true,
-      "captainhook/plugin-composer": true,
-      "captainhook/hook-installer": true
+      "worksome/coding-style": true
     }
   },
   "minimum-stability": "stable",
