feat: invite users to groups

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -43,7 +43,7 @@
     "psr-4": {
       "Database\\Factories\\": "database/factories/",
       "Database\\Seeders\\": "database/seeders/",
-      "Lightit\\": "src/"
+      "IHC\\": "src/"
     }
   },
   "autoload-dev": {
