--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,6 +39,7 @@
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
     "react-native-config": "^1.5.5",
+    "react-native-flash-message": "^0.4.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "^3.16.2",
     "react-native-safe-area-context": "^5.4.0",
