--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,7 +50,8 @@
     "tailwindcss": "^3.4.17",
     "zod": "^3.25.44",
     "zustand": "^5.0.5",
-    "expo-linear-gradient": "~14.1.4"
+    "expo-linear-gradient": "~14.1.4",
+    "@react-native-community/datetimepicker": "8.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
