--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,12 +10,15 @@
   "license": "MIT",
   "require": {
     "php": "^8.4",
+    "aws/aws-sdk-php": "^3.344",
     "dedoc/scramble": "^0.12.14",
     "google/apiclient": "^2.18",
     "guzzlehttp/guzzle": "^7.2",
     "laravel/framework": "^12.0",
     "laravel/sanctum": "^4.0",
     "laravel/tinker": "^2.9",
+    "league/flysystem": "^3.29",
+    "league/flysystem-aws-s3-v3": "^3.29",
     "light-it-labs/lightit-auth-laravel": "^1.0",
     "php-open-source-saver/jwt-auth": "^2.0",
     "sentry/sentry-laravel": "^4.4",
